--- a/baiduZhidaoCrawler/topword/scrapy.cfg
+++ b/baiduZhidaoCrawler/topword/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = seedword.settings
+default = topword.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = seedword
+project = topword
